# bp-telemetry-experimental

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN_ANTIGRAVITY.md  IMPLEMENTATION_SUMMARY.md  LAYER1_IMPLEMENTATION.md  Makefile  NEXT.md  OUTPUTS_AND_MODELS.md  PR_REVIEW.md  README.md  README_IMPLEMENTATION.md  REVIEW_COMPLETE.md  SETUP.md  STARTHERE.md  TODO.md  UPDATE.md  pyproject.toml  requirements.txt
.beads/: issues.jsonl
.claude/skills/blueplane/: SKILL.md
config/: privacy.yaml  redis.yaml
docs/: ARCHITECTURE.md  BEN_CURSOR_TRACE_INTEGRATION.md  DEV_WORKFLOW_VISION.md  FORK_SYNC_WORKFLOW.md  HOOKS_VS_TRACES.md  IMPLEMENTATION_PLAN_SQL.md  MISSING_MARKDOWN_FEATURES.md  SQLITE_VS_DUCKDB.md  TROUBLESHOOTING.md
docs/adr/: 0000-template.md  0001-database-stack-sqlite-and-optional-duckdb.md  README.md
docs/architecture/: layer1_capture.md  layer1_cursor_hook_output.md  layer2_conversation_reconstruction.md  layer2_db_architecture.md  layer2_metrics_derivation.md
reviews/claude-cursor-hooks-logging-redis-011CUzzFEs8ZFRGYXMPtzjid/composer/: review.md
scripts/: _start_dev_session_completion.sh  activate_venv.sh  check_status.py  create_demo_data.py  create_walkthrough_demo_data.py  end_dev_session.sh  init_redis.py  install_antigravity.py  install_claude_code.py  install_cursor.py  install_hooks.py  load_sample_data.py  resume_dev_session.sh  run_api_server.py  run_server.py  setup_venv.sh  show_recent_traces.py  start_dev_session.sh  start_server.sh  sync_upstream.sh  test_end_to_end.py  test_setup.py  trace_replay.py  verify_antigravity.py  verify_installation.py
src/blueplane/: __init__.py  config.py
src/blueplane/capture/: __init__.py  database_monitor.py  (+1 more)
src/capture/: README.md
src/processing/: server.py  workspace_history_server.py
tests/: test_claude_e2e.py
tests/integration/: test_fast_path.py  test_layer1.py
tests/unit/: test_capture.py
(+58 files in other folders)
